# ripmap

./: .gitignore  AGENTIC_MESA_RESEARCH.md  CLAUDE.md  Cargo.toml  IMPLEMENTATION_NOTES.md  LICENSE  README.md  all_code.txt  ripmap.toml
.github/workflows/: ci.yml  release.yml
docs/: 10_LLM_MESA_OPTIMIZATION.md  2_PAGERANK_IMPLEMENTATION.md  3_CLI_IMPLEMENTATION.md  5_STRUCTURAL_PROPOSALS.md  6_BELIEF_PROPAGATION_PROMPTS.md  7_LSP_NATIVE_ARCHITECTURE.md  8_DISSOLVED_DECISION_TREES.md  9_L1_L2_TRAINING_ARCHITECTURE.md  IMPLEMENTATION_NOTES.md  REASONING_OPTIMIZATION.md
examples/: boost_demo.rs  demo_discovery.rs  demo_focus.rs  extract_tags.rs  sample.js  sample.py  test_pagerank.rs  test_ripmap_itself.rs  training_extraction.rs
queries/: javascript-tags.scm  markdown-tags.scm  python-tags.scm
scripts/: generate_distractors.py  plot_training.py  reasoning_optimizer.py
src/: config.rs  lib.rs  main.rs  types.rs
src/cache/: mod.rs  store.rs
src/callgraph/: coordinates.rs  graph.rs  lsp_strategy.rs  mod.rs  pipeline.rs  resolver.rs  strategies.rs
src/discovery/: files.rs  mod.rs
src/extraction/: fields.rs  mod.rs  parser.rs  signatures.rs  tags.rs  treesitter.rs
src/lsp/: client.rs  coordinates.rs  mod.rs  policy.rs
src/mcp/: mod.rs  server.rs
src/ranking/: boosts.rs  bridges.rs  coupling.rs  focus.rs  git.rs  intent.rs  mod.rs  pagerank.rs  symbols.rs
src/rendering/: colors.rs  directory.rs  mod.rs  tree.rs
src/training/: git_oracle.rs  gridsearch.rs  metrics.rs  mod.rs  plots.rs  reasoning.rs  repos.rs  sensitivity.rs
src/training_outer/: mesa.rs  mod.rs  promptgram.rs  schemas.rs
training-outer/: POST_TRAINING_STUDY.md
training/prompts/: inner_default.md  inner_explorer.md
(+231 files in other folders)
